--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: python
 python:
 - 2.7
-- 3.5
+- 3.4
 - 3.6
 before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 - sudo apt-get update
-- if [[ "$TRAVIS_PYTHON_VERSION" == 2* ]]; then wget http://repo.continuum.io/miniconda/Miniconda-3.7.0-Linux-x86_64.sh
-  -O miniconda.sh; else wget http://repo.continuum.io/miniconda/Miniconda3-3.7.0-Linux-x86_64.sh
+- if [[ "$TRAVIS_PYTHON_VERSION" == 2* ]]; then wget http://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh
+  -O miniconda.sh; else wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
   -O miniconda.sh; fi
 - bash miniconda.sh -b -p $HOME/miniconda
 - export PATH="$HOME/miniconda/bin:$PATH"
@@ -17,7 +17,7 @@ before_install:
 install:
 - conda create -n test-environment python=$TRAVIS_PYTHON_VERSION
 - source activate test-environment
-- conda install numpy matplotlib scipy pandas nose pip ipython=5.1
+- conda install ipython matplotlib nose numpy pandas pip scipy six
 - pip install -r tools/travis-requirements.txt
 - python setup.py install
 script:
@@ -28,10 +28,10 @@ script:
 - nosetests skrf -c nose.cfg
 after_success:
 - coveralls
-deploy:
-  provider: pypi
-  user: arsenovic
-  password:
-    secure: CXC4a1iOePqzjr9+i0dfvAAMATIZvDd1xAagx3phwyh9iCrJva2hPNlZ0bRVhrmf0j8aBx1OzhiYrLN/mG+el5UROuQZXdovogr/TfyDgDxshLf5YAIUukubSJoiesAKtkgLYvp4xnUsbgqS1ONyHim3PBpfVF5v32jGUoMbSJU=
-  on:
-    tags: true
+#deploy:
+#  provider: pypi
+#  user: arsenovic
+#  password:
+#    secure: CXC4a1iOePqzjr9+i0dfvAAMATIZvDd1xAagx3phwyh9iCrJva2hPNlZ0bRVhrmf0j8aBx1OzhiYrLN/mG+el5UROuQZXdovogr/TfyDgDxshLf5YAIUukubSJoiesAKtkgLYvp4xnUsbgqS1ONyHim3PBpfVF5v32jGUoMbSJU=
+#  on:
+#    tags: true
